--- a/Kutuphane_giris/Kutuphane_giris.csproj
+++ b/Kutuphane_giris/Kutuphane_giris.csproj
@@ -46,6 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adminsayfasi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Adminsayfasi.Designer.cs">
+      <DependentUpon>Adminsayfasi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entity\Kisi.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +61,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Uyesayfasi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Uyesayfasi.Designer.cs">
+      <DependentUpon>Uyesayfasi.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,6 +78,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -75,6 +92,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pngtree-avatar-icon-profile-icon-member-login-vector-isolated-png-image_5247852.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\my-account-login.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rfid-kutuphane-otomasyonu-kapak-1080x675.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
