Adminsayfasi ve Form1 UI güncellemeleri, yeni metodlar
- `Adminsayfasi.Designer.cs` dosyasına yeni UI bileşenleri eklendi ve `InitializeComponent` metodu güncellendi.
- `Adminsayfasi.cs` dosyasına yeni metodlar eklendi ve constructor güncellendi.
- `Form1.Designer.cs` dosyasına `txt_kullaniciadi` bileşeni için `TextChanged` olayı eklendi, arka plan resmi kaldırıldı ve form boyutu değiştirildi.
- `Form1.cs` dosyasına yeni metodlar eklendi ve `btn_giris_Click` metodu güncellendi.
- `Kutuphane_giris.csproj` dosyasına `Adminsayfasi.resx` dosyası eklendi.
- `Adminsayfasi.resx` dosyasına yeni XML içeriği ve metadata bilgileri eklendi.
- `list1.cs` dosyasına `list<T>` generic sınıfı eklendi ve `List<Kisi>` türünden bir nesnenin `list<T>` türüne dönüşümünü sağlayan operatör eklendi (henüz uygulanmamış).

--- a/Kutuphane_giris/Kutuphane_giris.csproj
+++ b/Kutuphane_giris/Kutuphane_giris.csproj
@@ -67,6 +67,9 @@
     <Compile Include="Uyesayfasi.Designer.cs">
       <DependentUpon>Uyesayfasi.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Adminsayfasi.resx">
+      <DependentUpon>Adminsayfasi.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
