Adminsayfasi formuna yeni bileşenler ve işlevler eklendi
- Yeni bileşenler eklendi: `ımageList1`, `backgroundWorker1`, `groupBox2`, `dataGridView2`, ve çeşitli butonlar ve metin kutuları.
- Bazı bileşenler kaldırıldı: `maskedTextBox1`, `ımageList1`, `txt_kullaniciadi`, `label8`.
- Mevcut bileşenlerin özellikleri değiştirildi: `groupBox1`, `btn_temizle`, `btn_guncelle`, `btn_sil`, `btn_ekle`, `txt_yetki`, `label6`, `txt_sifre`, `label5`, `label4`, `label3`, `label2`, `label1`, `label7`, `dataGridView1`.
- Yeni bir `label9` etiketi eklendi ve özellikleri ayarlandı.
- `Adminsayfasi` formunun boyutu değiştirildi ve yeni eklenen kontroller forma eklendi.
- `List<Kitap> kitaplarim` adlı yeni bir liste ve bu listeyi parametre olarak alan yeni bir kurucu metot eklendi.
- `Adminsayfasi_Load` olayında, `kitaplarim` listesindeki kitapların `dataGridView2`'ye eklenmesi için yeni bir döngü eklendi.
- Yeni buton olayları (`btn_kitapekle_Click`, `btn_kitapsil_Click`, `btn_kitapguncelle_Click`, `btn_kitaptemizle_Click`) eklendi.
- `dataGridView2_CellClick` olayı eklendi.
- `Adminsayfasi.resx` dosyasına yeni metadata ve veri eklemeleri yapıldı.
- `Adminsayfasi.resx` dosyasındaki `$this.TrayHeight` metadata değeri `25`'ten `83`'e değiştirildi.
- `Form1.cs` dosyasına `List<Kitap> kitaplarim` adlı bir liste eklendi ve `Form1_Load` metodunda bu listeye bazı kitaplar eklendi.
- `Kutuphane_giris.csproj` dosyasına `Entity\Kitap.cs` dosyası eklendi.
- `Kitap.cs` adlı yeni bir dosya eklendi ve bu dosyada `Kitap` sınıfı tanımlandı.

--- a/Kutuphane_giris/Kutuphane_giris.csproj
+++ b/Kutuphane_giris/Kutuphane_giris.csproj
@@ -53,6 +53,7 @@
       <DependentUpon>Adminsayfasi.cs</DependentUpon>
     </Compile>
     <Compile Include="Entity\Kisi.cs" />
+    <Compile Include="Entity\Kitap.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
